Actualicé index.html con nuevos contenidos

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo de ciencias de datos </title>
+    <title>Defunciones y Egresos en chile </title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 200000px;
+            padding: 20px;
             background-color: #f4f4f4;
         }
         img {
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <h1>Proyecto X ciencias de datos</h1>
+    <h1>Defunciones y Egresos en Chile (2001-2020)</h1>
     
     <div class="descripcion">
         <p><b>Soy un conejito y busco una conejita🐰🐇, que me ame y que me respete😪😌, y que me de muchas zanahorias🥕🥕, porque me encantan las zanahorias🥕🥕, y aunque no lo creas apenas tengo 30 añitos😬, siiiiiiiiiiiii😶, me gusta el anime, el manga, los videojuegos y soy super kawai😎😝, mira mis ojitos de animé que tengo🥲🥺, ahhajahajajjjajahahah🤯, por favor se me coneja y quiéreme mucho🤗☺️, por favor y te mando un besito</b></p>
