pagina web con img

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
     <div class="Preguntas">
         <h3><b>4)</b>¿Cuáles son las causas más comunes de ingreso hospitalario (causa interna) y cuál es la distribución de los pacientes vivos y fallecidos para cada una?</h3>
-        <p><br><strong> mas comunes de ingreso:</strong>
+        <p><br><strong> Causas mas comunes de ingreso:</strong>
 
             <br>Traumatismo intracraneal, no especificado es la causa más común con 170577 casos (96.74% de efectividad).
             Otras causas frecuentes incluyen fracturas (columna, fémur, etc.) y lesiones en el hombro.
@@ -278,12 +278,10 @@
             <p> Mortalidad por edad</p>      
         </a>
         <p><strong>Edad:</strong>
-            <br>La mortalidad es muy baja en niños de 1 a 9 años (0.18%-0.21%) y aumenta en menores de un año (1.10%). 
-            <br>En adultos jóvenes y de mediana edad, la mortalidad empieza a subir en el grupo de 30 a 39 años (0.35%) y continúa aumentando en los grupos de 40 a 59 años (hasta 2.05%).
-            <br>A partir de los 60 años, el aumento de la mortalidad es marcado: 3.55% en 60-69 años, 5.85% en 70-79 años, 9.80% en 80-89 años y 14.98% en mayores de 90 años. Conclusiones: La mortalidad aumenta con la edad, especialmente a partir de los 60 años, siendo más notable en adultos mayores. 
-            <br>Los menores de un año también presentan mayor vulnerabilidad. Las políticas de salud pública deben priorizar a los mayores de 60 años y a los menores de un año.</p>
-        <a href="img/mortalidad por edad.png" target="_blank">
-            <img src="img/mortalidad por edad.png" alt="Gráfico 4-12 años">
+            <br>Tendencias de mortalidad por edad: <br>La mortalidad aumenta con la edad, como se esperaba, y los más jóvenes tienen una probabilidad mucho más alta de sobrevivir en comparación con los más viejos.
+            <br>Impacto del sexo:<br> Aunque el sexo influye en la mortalidad, parece que el factor más importante es el grupo de edad, con una distinción entre hombres y mujeres en algunas categorías.</p>
+        <a href="img/matriz.png" target="_blank">
+            <img src="img/matriz.png" alt="Gráfico 4-12 años">
             <p>Mortalidad por genero</p>
         </a>
         <p><strong> Edad y genero:</strong>
@@ -325,6 +323,9 @@
             <img src="img/mortalidad por region.png" alt="Gráfico 4-12 años">
             <p>Mortalidad por region</p>
         </a>
+    </div>
+    <div>
+        <p><p>Para más información, visita el repositorio: <a href="https://github.com/siwikiwi/ATDC--imt2200" target="_blank">este sitio web</a>.</p></p>
     </div>
     <div class="imagenes3">
         <a href="img/Gracias.png" target="_blank">
