pagina web con img

--- a/index.html
+++ b/index.html
@@ -324,10 +324,9 @@
             <p>Mortalidad por region</p>
         </a>
     </div>
-    <div>
-        <p><p>Para más información, visita el repositorio: <a href="https://github.com/siwikiwi/ATDC--imt2200" target="_blank">este sitio web</a>.</p></p>
-    </div>
+
     <div class="imagenes3">
+        <p><p><br><br><br><strong> más información, visita el repositorio: <a href="https://github.com/siwikiwi/ATDC--imt2200" target="_blank">este sitio web</a>.</strong><br><br><br></p></p>
         <a href="img/Gracias.png" target="_blank">
             <img src="img/chill.jpeg" alt="Descripción de la imagen">
             <p>Gracias por ver</p>
