pagina web con img

--- a/index.html
+++ b/index.html
@@ -324,7 +324,11 @@
             <p>Mortalidad por region</p>
         </a>
     </div>
-
+    <div><p><strong>Dato curioso:</strong><br>usando un regresion lineal pudimos predecir que en enero de 2050 moriran 16064<br><br></p></div>
+    <div class="imagenes4"></div>
+    <a href="img/regresion_lineal.png" target="_blank">
+        <img src="img/regresion_lineal.png" alt="Gráfico 0-4 años">
+        <p> Regresion Lineal</p>      
     <div class="imagenes3">
         <p><p><br><br><br><strong> más información, visita el repositorio: <a href="https://github.com/siwikiwi/ATDC--imt2200" target="_blank">este sitio web</a>.</strong><br><br><br></p></p>
         <a href="img/Gracias.png" target="_blank">
