pagina web con img

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     
     <div class="Introducción">
         <h2>Introducción</h2>
-        <p> <strong>(Dar click a las imagenes para verlas completas)</strong>
+        <p> <strong>(Dar click a las imagenes para verlas completas)</strong><br>
             El análisis de datos relacionados con la salud es esencial para comprender las dinámicas de la población y el impacto de las políticas sanitarias a lo largo del tiempo. En este estudio, se analizarán dos tipos de datos clave: las defunciones (muertes) y los egresos hospitalarios, los cuales provienen tanto de instituciones de salud públicas como privadas. Estos datos ofrecen una visión integral del sistema de salud en Chile y nos permiten evaluar cómo la población ha respondido ante diversos factores de salud, incluyendo la prevalencia de enfermedades y las respuestas del sistema sanitario.
         </p>
         <p>
