--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     
     <div class="Introducción">
         <h2>Introducción</h2>
-        <p> <strong>(Dar click a las imagenes para verlas completas)</strong><br>
+        <p>
             El análisis de datos relacionados con la salud es esencial para comprender las dinámicas de la población y el impacto de las políticas sanitarias a lo largo del tiempo. En este estudio, se analizarán dos tipos de datos clave: las defunciones (muertes) y los egresos hospitalarios, los cuales provienen tanto de instituciones de salud públicas como privadas. Estos datos ofrecen una visión integral del sistema de salud en Chile y nos permiten evaluar cómo la población ha respondido ante diversos factores de salud, incluyendo la prevalencia de enfermedades y las respuestas del sistema sanitario.
         </p>
         <p>
@@ -133,6 +133,7 @@
         <p>
             A través de este análisis, buscaremos responder algunas preguntas clave que nos permitirán entender mejor los patrones en la mortalidad y hospitalización en Chile, tales como:
         </p>
+        <h2>(Dar click a las imagenes para verlas completas)</h2>
     </div>
     
     <div class="Preguntas">
