--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             Condiciones de salud: Enfermedades crónicas afectan a adultos mayores.
             Estilos de vida: El consumo de tabaco y alcohol contribuye a la mortalidad, especialmente en hombres.
             Acceso a atención médica: La desigualdad en el acceso a la salud influye en las tasas de mortalidad.</p>
-        <a href="img/mortalidad por edad y genero.png.png" target="_blank">
-            <img src="img/mortalidad por edad y genero.png" alt="Gráfico 4-12 años">
+        <a href="img/edad_genero.png" target="_blank">
+            <img src="img/edad_genero.png" alt="Gráfico 4-12 años">
             <p>Mortalidad por edad y genero</p>
         </a>
         <p><strong>Region:</strong>
@@ -337,7 +337,7 @@
             <br>   Condiciones de salud regionales: Las diferencias pueden estar relacionadas con el acceso a servicios de salud.
             <br>   socioeconómicos y ambientales: El nivel socioeconómico, la educación y las condiciones de vivienda pueden influir.
             <br>   Estilos de vida: Diferencias en hábitos como alimentación, ejercicio, y consumo de tabaco o alcohol podrían afectar las tasas de mortalidad.</p>
-        <a href="img/mortalidad por region.png.png" target="_blank">
+        <a href="img/mortalidad por region.png" target="_blank">
             <img src="img/mortalidad por region.png" alt="Gráfico 4-12 años">
             <p>Mortalidad por region</p>
         </a>
